package com.example.demo.controller;

import org.springframework.beans.factory.annotation.Autowired;
import org.springframework.stereotype.Controller;
import org.springframework.web.bind.annotation.RequestParam;
import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.security.core.Authentication;
import java.security.Principal;
import java.util.List;
import com.example.demo.services.ChampionshipsService;
import com.example.demo.model.Championship;
import com.example.demo.model.User;
import com.example.demo.repositories.UserRepository;
import org.springframework.security.core.context.SecurityContextHolder;
import org.springframework.ui.Model;

@Controller
public class ChampionshipsController {

    //Inyecto dependencias
    @Autowired
    private ChampionshipsService championshipsService;
    @Autowired
    private UserRepository userRepository;
    
    @RequestMapping("/championships")
    public String showChampionships(Model model, Principal principal) {
        //Para controlar si el usuario está autenticado
        boolean isLog = (principal != null);
        model.addAttribute("isLog", isLog);
        Authentication auth = SecurityContextHolder.getContext().getAuthentication(); //Para obtener informacion del usuario autenticado
        if (auth != null && auth.isAuthenticated()) { //Si el usuario está autenticado, cojo su nombre y lo añado al modelo
            String username = auth.getName();
            User user = userRepository.findByEmail(username);
            model.addAttribute("user", user);
        }
        List<Championship> listChampionships = championshipsService.findAll(); //Recojo la lista de campeonatos disponibles en mi base de datos
        model.addAttribute("listChampionships", listChampionships); //Agrego al modelo los campeonatos
        return "championships";
    }

    //Para mostrar detalles de un campeonato en especifico
    @RequestMapping("/showChampionship")
    public String showChampionship(@RequestParam("id") Long id, Model model) {
        //Con RequestParam recojo el id del campeonato que quiero mostrar
        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
        if (auth != null && auth.isAuthenticated()) {
            String username = auth.getName();
            User user = userRepository.findByEmail(username);
            model.addAttribute("user", user);
        }
        Championship champ = championshipsService.findById2(id);
        if (champ != null) {
            model.addAttribute("championship", champ);
            model.addAttribute("leagueId", champ.getId()); //Necesito el id de la competicion para hacer la llamada de la API que me devuelve los partidos de una competicion
            String powerBiURL;
            String powerBiURL2;
            //Cada campeonato tiene asignados dos informes de powerBi
            //Obtengo el nombre y segun la competicion que sea, le asigno sus correspondientes informes
            switch (champ.getName()) {
                case "Bundesliga":
                    powerBiURL = "https://app.powerbi.com/view?r=eyJrIjoiYTQ4YzNlMjgtZTBiNC00MTlkLWE5MjEtNjA1MzJmYzllOTg2IiwidCI6IjVmODRjNGVhLTM3MGQtNGI5ZS04MzBjLTc1NmY4YmYxYjUxZiIsImMiOjh9&pageName=24eda314bd635c9586ac";
                    powerBiURL2 = "https://app.powerbi.com/view?r=eyJrIjoiYzRlZmQ2OWItNTZiNC00NzQxLWIyMWMtNjMwNjZiYWIyNzc0IiwidCI6IjVmODRjNGVhLTM3MGQtNGI5ZS04MzBjLTc1NmY4YmYxYjUxZiIsImMiOjh9";
                    break;
                case "La Liga":
                    powerBiURL = "https://app.powerbi.com/view?r=eyJrIjoiNzk2ZDU0MDMtZWMxZS00NjAzLTlhNTAtMTQ3NmIxNjBlMGQzIiwidCI6IjVmODRjNGVhLTM3MGQtNGI5ZS04MzBjLTc1NmY4YmYxYjUxZiIsImMiOjh9&pageName=2fb42849f8433bceda63";
                    powerBiURL2 = "https://app.powerbi.com/view?r=eyJrIjoiYTkxMWU3YzItYzYyMi00MjVjLTlhN2EtOTVhMTllNzA5YmE4IiwidCI6IjVmODRjNGVhLTM3MGQtNGI5ZS04MzBjLTc1NmY4YmYxYjUxZiIsImMiOjh9";
                    break;
                case "Premier League":
                    powerBiURL = "https://app.powerbi.com/view?r=eyJrIjoiODI1MWMxODctYzEwNy00ZGU5LWIzZmMtNGZhZTA1OGU0ZmIwIiwidCI6IjVmODRjNGVhLTM3MGQtNGI5ZS04MzBjLTc1NmY4YmYxYjUxZiIsImMiOjh9";
                    powerBiURL2 = "https://app.powerbi.com/view?r=eyJrIjoiMWFlMTk3ZDgtN2VkOC00ZGQ2LWI4YWUtZTY2ZGYwZjk3YzdjIiwidCI6IjVmODRjNGVhLTM3MGQtNGI5ZS04MzBjLTc1NmY4YmYxYjUxZiIsImMiOjh9";
                    break;
                case "Serie A":
                    powerBiURL = "https://app.powerbi.com/view?r=eyJrIjoiNmEzZGQ4NDktM2M3Yy00ODVhLWEzOWEtMDQzMWExZmVjY2U4IiwidCI6IjVmODRjNGVhLTM3MGQtNGI5ZS04MzBjLTc1NmY4YmYxYjUxZiIsImMiOjh9&pageName=b6e19b504af03c8ac43d";
                    powerBiURL2 = "https://app.powerbi.com/view?r=eyJrIjoiNGMxODA5NGYtYTBhZi00MzU4LTllNjYtZGVlNDc1Mzg0NDI1IiwidCI6IjVmODRjNGVhLTM3MGQtNGI5ZS04MzBjLTc1NmY4YmYxYjUxZiIsImMiOjh9";
                    break;
                case "Ligue 1":
                    powerBiURL = "https://app.powerbi.com/view?r=eyJrIjoiMDJiMzNkMGQtOGVkOC00YzBiLWFkYTItODc1MzUzMmY3MWZjIiwidCI6IjVmODRjNGVhLTM3MGQtNGI5ZS04MzBjLTc1NmY4YmYxYjUxZiIsImMiOjh9&pageName=0049490b2017f30fc5a5";
                    powerBiURL2 = "https://app.powerbi.com/view?r=eyJrIjoiOGYzNTRmODQtMzIzMi00MGViLThmZTQtODJlOTQ5OGI1ZWQ1IiwidCI6IjVmODRjNGVhLTM3MGQtNGI5ZS04MzBjLTc1NmY4YmYxYjUxZiIsImMiOjh9";
                    break;
                default:
                    powerBiURL = null;
                    powerBiURL2 = null;
            }
            //Agrego los informes al modelo para visualizarlos
            model.addAttribute("powerBi", powerBiURL);
            model.addAttribute("powerBi2", powerBiURL2);
        }
        return "showChampionship";
    }
}
